# wasm-raytracer

./: .gitignore  Cargo.toml  README.md  build.sh  index.html
assets/: index.js  loadWasm.js  style.css
docs/: index.html
docs/assets/css/: figure.css  index.css
docs/assets/vid/: demo.ogv
docs/rustdoc/: aliases.js  search-index.js
docs/rustdoc/raytracer_5607/: all.html  index.html  sidebar-items.js
docs/rustdoc/raytracer_5607/camera/: index.html  sidebar-items.js  struct.Camera.html
docs/rustdoc/raytracer_5607/image/: index.html  sidebar-items.js  struct.Image.html
docs/rustdoc/raytracer_5607/intersection/: index.html  sidebar-items.js  struct.Intersection.html
docs/rustdoc/raytracer_5607/lights/: index.html  sidebar-items.js
docs/rustdoc/raytracer_5607/material/: index.html  sidebar-items.js  struct.Material.html
docs/rustdoc/raytracer_5607/pixel/: Pixel.t.html  RawPixel.t.html  index.html  (+3 more)
pkg/: wasm_raytracer.js  wasm_raytracer_bg.wasm  wasm_starter.js  wasm_starter_bg.wasm
scenes/: ShadowTest.scn  ShadowTest2.scn  ambient_sphere.scn  bear.scn  bottle.scn  dragon.scn  gear.scn  gear2.scn  ico.scn  plane_test.scn  small.scn  spot_test.scn  test.scn  triangle.scn
scenes/spheres/: one_sphere.scn  spheres1.scn  spheres2.scn  spheres3.scn  spot_sphere.scn
src/: camera.rs  image.rs  intersection.rs  lib.rs  main.rs  material.rs  pixel.rs  ray.rs  ray_tracer.rs  scene.rs  sphere.rs  vector.rs
src/lights/: directional_light.rs  light.rs  mod.rs  point_light.rs  spot_light.rs
src/objects/: mod.rs  object.rs  plane.rs  sphere.rs  triangle.rs
(+54 files in other folders)
