[package]
name = "wasm-raytracer"
version = "0.1.0"
authors = ["Bridger Herman"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
base64 = "0.10"
png = "0.14"
wasm-logger = {git = "https://github.com/bridger-herman/wasm-logger.git"}
log = "0.4"

[dev-dependencies]
glm = "0.2"
